--- a/pipelines/incubator/utilities-task.yaml
+++ b/pipelines/incubator/utilities-task.yaml
@@ -562,6 +562,11 @@ spec:
            STACK_VERSION=$( skopeo inspect --tls-verify=false docker://$INPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE  | jq -r '.Labels."dev.appsody.stack.version"' ) 
            # Retrieve the version from the application image
            STACK_DIGEST=$( skopeo inspect --tls-verify=false docker://$INPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE  | jq -r '.Labels."dev.appsody.stack.digest"' ) 
+           # TODO: Temporary until Appsody is able to correctly set this label
+           if [ -z "$STACK_DIGEST" ] || [ "$STACK_DIGEST" == "null" ]; then\
+              echo "$WARN The image label 'dev.appsody.stack.digest' has not been set for image: $INPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE, unable to enforce stackPolicy"
+              exit 0  
+           fi
            # Retrieve all the digests of the stack
            CLUSTER_STACK_DIGESTS=$( kubectl get stack $STACK_NAME -o json | jq -r '.status.versions[].images[].digest.activation?' )
         
