--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,4 @@ deploy:
   file_glob: true
   on:
     tags: true
-    repo: kabanero-io/kabanero-pipelines
+    repo: $GITHUB_REPO/kabanero-pipelines
