--- a/pipelines/experimental/eventing-pipelines/build-push-task.yaml
+++ b/pipelines/experimental/eventing-pipelines/build-push-task.yaml
@@ -236,13 +236,60 @@ spec:
            /workspace/$gitsource/ca_certs_setup.sh
         fi
 
-        buildah push --tls-verify=true "$OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE" "docker://$OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE"
+        REPO=`cat /etc/imagesigning.conf/registry`
+        if [[ -z $REPO ]]
+        then
+           echo "Signature will not be generated."
+           buildah push --tls-verify=true "$OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE" "docker://$OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE"
+        else
+           echo "Sigstore will be generated."
+           if [[ $OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE != $REPO/* ]]; then
+              echo "The specified signed image repository does not match the name of the repository in sign-secret-key secret resource. The repository name should start with $REPO, Specified signed image name is $OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE"
+              exit 1
+           fi
+
+           SIGSTORE_URL=`cat /etc/imagesigning.conf/sigstore`
+           gpg --import /etc/imagesigning.conf/secret.asc
+           SIGNBY=`gpg --list-keys|sed -n -e "/.*<.*>.*/p"|sed -e "s/^.*<\(.*\)>.*$/\1/"`
+           skopeo --debug copy --dest-tls-verify=true --remove-signatures --sign-by $SIGNBY "containers-storage:$OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE" "docker://$OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE"
+
+           if [[ -z $SIGSTORE_URL ]]; then
+              echo "Signature is stored in the image registry"
+           else
+              LOCAL_SIGSTORE="/workspace/signtask/sigstore"
+              SPLITTED=(${REPO//// })
+              REPOSITE=${SPLITTED[0]}
+              NAMESPACE=`ls $LOCAL_SIGSTORE`
+              NAMESPACE=$NAMESPACE/`ls $LOCAL_SIGSTORE/$$NAMESPACE`
+              TOKEN=`cat /var/run/secrets/kubernetes.io/serviceaccount/token`
+              echo $REPOSITE
+              echo $NAMESPACE
+              echo $SIGSTORE_URL/staging/store.php
+              for d in $LOCAL_SIGSTORE/**/*; do
+                 for f in $d/*;do
+                    echo $f
+                    curl -H "Authorization: Bearer $TOKEN" -F "signature=@$f" -F "namespace=$NAMESPACE" -F "registry=$REPOSITE" -F "form_submitted=1" -k -s $SIGSTORE_URL/staging/store.php >> /workspace/result.txt
+                 done
+              done
+              cat /workspace/result.txt
+              if cat /workspace/result.txt | grep "^Result:Failure:"
+              then
+                 false
+              else
+                 cat /workspace/result.txt | grep "^Result:Success:"
+              fi
+           fi
+        fi
     env:
     - name: gitsource
       value: git-source
     volumeMounts:
     - mountPath: /var/lib/containers
       name: varlibcontainers
+    - mountPath: /etc/imagesigning.conf
+      name: image-signing-config
+    - mountPath: /etc/containers/registries.d
+      name: registries-d
   volumes:
   - name: varlibcontainers
     emptyDir: {}
@@ -250,7 +297,16 @@ spec:
     configMap:
       name: stack-image-registry-map
       optional: true
+  - name: registries-d
+    configMap:
+      name: registries-d
+      optional: true
   - name: secret-volume
     secret:
       secretName: default-stack-image-registry-secret
       optional: true
+  - name: image-signing-config
+    secret:
+      secretName: image-signing-config
+      optional: true
+
