--- a/pipelines/incubator/build-push-pl-tr.yaml
+++ b/pipelines/incubator/build-push-pl-tr.yaml
@@ -1,5 +1,5 @@
 #Kabanero! on activate substitute StackId for text 'StackId'
-apiVersion: tekton.dev/v1alpha1
+apiVersion: triggers.tekton.dev/v1alpha1
 kind: TriggerBinding
 metadata:
   name: StackId-build-push-pl-pullrequest-binding
@@ -19,7 +19,7 @@ spec:
   - name: webhooks-tekton-git-branch
     value: $(body.webhooks-tekton-git-branch)
 ---
-apiVersion: tekton.dev/v1alpha1
+apiVersion: triggers.tekton.dev/v1alpha1
 kind: TriggerBinding
 metadata:
   name: StackId-build-push-pl-push-binding
@@ -39,7 +39,7 @@ spec:
   - name: webhooks-tekton-git-branch
     value: $(body.webhooks-tekton-git-branch)
 ---
-apiVersion: tekton.dev/v1alpha1
+apiVersion: triggers.tekton.dev/v1alpha1
 kind: TriggerTemplate
 metadata:
   name: StackId-build-push-pl-template
@@ -73,7 +73,7 @@ spec:
   - name: webhooks-tekton-target-namespace
     description: The namespace in which to create this TriggerTemplate's resources
   resourcetemplates:
-  - apiVersion: tekton.dev/v1alpha1
+  - apiVersion: triggers.tekton.dev/v1alpha1
     kind: PipelineResource
     metadata:
       name: git-source-$(uid)
@@ -85,7 +85,7 @@ spec:
         value: $(params.gitrevision)
       - name: url
         value: $(params.gitrepositoryurl)
-  - apiVersion: tekton.dev/v1alpha1
+  - apiVersion: triggers.tekton.dev/v1alpha1
     kind: PipelineResource
     metadata:
       name: docker-image-$(uid)
@@ -95,7 +95,7 @@ spec:
       params:
       - name: url
         value: $(params.webhooks-tekton-docker-registry)
-  - apiVersion: tekton.dev/v1alpha1
+  - apiVersion: triggers.tekton.dev/v1alpha1
     kind: PipelineRun
     metadata:
       generateName: StackId-build-push-pl-run-
