--- a/pipelines/incubator/build-task.yaml
+++ b/pipelines/incubator/build-task.yaml
@@ -1,20 +1,19 @@
 #Kabanero! on activate substitute StackId for text 'StackId'
-apiVersion: tekton.dev/v1alpha1
+apiVersion: tekton.dev/v1beta1
 kind: Task
 metadata:
   name: StackId-build-task
 spec:
-  inputs:
-    resources:
+  resources:
+    inputs:
     - name: git-source
       type: git
-    params:
-    - name: stack-image-registry-url
-      default: docker.io
-  outputs:
-    resources:
+    outputs:
     - name: docker-image
       type: image
+  params:
+  - name: stack-image-registry-url
+    default: docker.io
   steps:
   - name: build
     securityContext:
