--- a/pipelines/incubator/image-retag-task.yaml
+++ b/pipelines/incubator/image-retag-task.yaml
@@ -1,24 +1,23 @@
 #Kabanero! on activate substitute StackId for text 'StackId'
-apiVersion: tekton.dev/v1alpha1
+apiVersion: tekton.dev/v1beta1
 kind: Task
 metadata:
   name: StackId-image-retag-task
 spec:
-  inputs:
-    resources:
+  resources:
+    inputs:
       - name: docker-src-image
         type: image
       - name: docker-dest-image
         type: image
-    params:
-      - name: pathToDockerFile
-        default: /workspace/extracted/Dockerfile
-      - name: pathToContext
-        default: /workspace/extracted
-  outputs:
-    resources:
+    outputs:
       - name: docker-dest-image
         type: image
+  params:
+  - name: pathToDockerFile
+    default: /workspace/extracted/Dockerfile
+  - name: pathToContext
+    default: /workspace/extracted
   steps:
     - name: buildah-pull
       securityContext:
