--- a/pipelines/incubator/image-retag-pl.yaml
+++ b/pipelines/incubator/image-retag-pl.yaml
@@ -1,5 +1,5 @@
 #Kabanero! on activate substitute StackId for text 'StackId'
-apiVersion: tekton.dev/v1alpha1
+apiVersion: tekton.dev/v1beta1
 kind: Pipeline
 metadata:
   name: StackId-image-retag-pl
