--- a/pipelines/experimental/gitops-pipelines/build-push-promote-task.yaml
+++ b/pipelines/experimental/gitops-pipelines/build-push-promote-task.yaml
@@ -10,7 +10,6 @@ spec:
     params:
     - name: git-project
       type: string
-      default: "default-service-name"
   outputs:
     resources:
     - name: docker-image
@@ -18,6 +17,84 @@ spec:
     - name: git-source
       type: git
   steps:
+  - name: build
+    securityContext:
+      privileged: true
+    image: appsody/appsody-buildah:0.5.8-buildah1.9.0
+    command: ["/bin/bash"]
+    args:
+      - -c
+      - |
+        cd /workspace/$gitsource
+
+        #executing the insecure_registry_setup.sh script if exists, to add internal registry to insecure registry list
+        if [ -f "/workspace/$gitsource/insecure_registry_setup.sh" ]; then
+           echo "Running the script /workspace/$gitsource/insecure_registry_setup.sh ...."
+           /workspace/$gitsource/insecure_registry_setup.sh
+        fi
+
+        #executing the ca_certs_setup.sh script if exists, to add additional trusted ca certs to /etc/docker/certs.d/<hosname>/ca.crt
+        if [ -f "/workspace/$gitsource/ca_certs_setup.sh" ]; then
+           echo "Running the script /workspace/$gitsource/ca_certs_setup.sh ...."
+           /workspace/$gitsource/ca_certs_setup.sh
+        fi
+
+        OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE=$( /workspace/$gitsource/imageurl_imagename_lowercase.sh )
+        retVal=$?
+        if [ $retVal -ne 0 ]
+        then
+           echo "The script failed(/workspace/$gitsource/imageurl_imagename_lowercase.sh) Reason: $OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE" >&2
+           exit $retVal
+        fi
+
+        echo "OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE=$OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE"
+
+        appsody build -t "$OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE" --buildah --buildah-options "--format=docker"
+        echo "Copying the generated app-deploy.yaml file from input to the output to pass the file to the next task when this task is used in deploy pipeline"
+        cp app-deploy.yaml $(outputs.resources.git-source.path)
+    env:
+    - name: gitsource
+      value: git-source
+    volumeMounts:
+    - mountPath: /var/lib/containers
+      name: varlibcontainers
+  - name: push
+    securityContext:
+      privileged: true
+    image: appsody/appsody-buildah:0.5.8-buildah1.9.0
+    command: ["/bin/bash"]
+    args:
+      - -c
+      - |
+        #executing the insecure_registry_setup.sh script if exists, to add internal registry to insecure registry list
+        if [ -f "/workspace/$gitsource/insecure_registry_setup.sh" ]; then
+           echo "Running the script /workspace/$gitsource/insecure_registry_setup.sh ...."
+           /workspace/$gitsource/insecure_registry_setup.sh
+        fi
+
+        #executing the ca_certs_setup.sh script if exists, to add additional trusted ca certs to /etc/docker/certs.d/<hosname>/ca.crt
+        if [ -f "/workspace/$gitsource/ca_certs_setup.sh" ]; then
+           echo "Running the script /workspace/$gitsource/ca_certs_setup.sh ...."
+           /workspace/$gitsource/ca_certs_setup.sh
+        fi
+
+        OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE=$( /workspace/$gitsource/imageurl_imagename_lowercase.sh)
+        retVal=$?
+        if [ $retVal -ne 0 ]
+        then
+           echo "The script failed(/workspace/$gitsource/imageurl_imagename_lowercase.sh) Reason: $OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE" >&2
+           exit $retVal
+        fi
+
+        echo "OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE=$OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE"
+  
+        buildah push --tls-verify=false "$OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE" "docker://$OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE"
+    env:
+    - name: gitsource
+      value: git-source
+    volumeMounts:
+    - mountPath: /var/lib/containers
+      name: varlibcontainers
   - name: promote
     securityContext:
       privileged: true
@@ -29,15 +106,21 @@ spec:
         echo "Gitops repo url = $GITOPS_REPO_URL"
         echo "Gitops repo commit name = $GITOPS_COMMIT_USER_NAME"
         echo "Gitops repo commit email = $GITOPS_COMMIT_USER_EMAIL"
-        echo "Gitops token = $GITHUB_TOKEN"
+        echo " "
 
         if [[ ! -z "$GITOPS_REPO_URL" ]]; then
-          # Find the app-deploy.yaml to the /config folder of the gitops repo
+
+          if [ -z "$GITHUB_TOKEN" ]; then
+            echo "[ERROR] Secret 'gitops-token' with the token to access gitops repo was not configured. Please configure secret and try again."
+            exit 1
+          fi
+
+          # Move the app-deploy.yaml to the /config folder of the gitops repo
           cd /workspace/$gitsource
           mkdir config
           mv app-deploy.yaml config
 
-          # TODO: Generate a kustomize.yaml file under config with list of resources
+          # Generate a kustomize.yaml file under config with list of resources
           cd config 
           KUSTOMIZATION_YAML="kustomization.yaml"
           touch $KUSTOMIZATION_YAML
@@ -51,8 +134,10 @@ spec:
               fi
           done
 
+          echo "KUSTOMIZATION_YAML = "
           cat $KUSTOMIZATION_YAML
           
+          echo " "
           echo "List of files under config directory being promoted - "
           ls
 
@@ -62,12 +147,12 @@ spec:
           touch $GITCONFIG
 
           if [ -z "$GITOPS_COMMIT_USER_NAME" ]; then
-            echo "gitops-commit-user-name not configured in the gitops-map config map.  Using a default value of kabanero."
+            echo "[WARN] gitops-commit-user-name not configured in the gitops-map config map.  Using a default value of kabanero."
             GITOPS_COMMIT_USER_NAME="kabanero"
           fi
 
           if [ -z "$GITOPS_COMMIT_USER_EMAIL" ]; then
-            echo "gitops-commit-user-email not configured in the gitops-map config map.  Using a default value of functional-id@kabanero.io."
+            echo "[WARN] gitops-commit-user-email not configured in the gitops-map config map.  Using a default value of functional-id@kabanero.io."
             GITOPS_COMMIT_USER_EMAIL="functional-id@kabanero.io"
           fi
 
@@ -76,22 +161,30 @@ spec:
           echo "  email = $GITOPS_COMMIT_USER_EMAIL" >> $GITCONFIG
           cat $HOME/.gitconfig
 
+          echo " "
           echo "service name = $(inputs.params.git-project)"
+          if [[ -z "$(inputs.params.git-project)" ]]; then
+            echo "[ERROR] Unable to retrieve service name from input params.  Unable to promote."
+            exit 1
+          fi
+
           services promote --from /workspace/$gitsource --to $(GITOPS_REPO_URL) --service $(inputs.params.git-project)  --debug
+          if [ $0 != 0 ]; then
+            echo "[ERROR] Promote to gitops repo failed.  Please review logs above."
+            exit 1
+          fi
         else
-          echo "No gitops repo configured.  service promote not executed."
+          echo "[INFO] No gitops repo configured.  service promote not executed."
         fi
     env:
     - name: gitsource
       value: git-source
     - name: GITHUB_TOKEN
-      value: ccdea9b2f8b0db2ad77552bc8d98d4ca15e1d10a
-#    - name: GITHUB_TOKEN
-#      valueFrom:
-#        secretKeyRef:
-#          name: gitops-token-secret
-#          key: token
-#          optional: true
+      valueFrom:
+        secretKeyRef:
+          name: gitops-token
+          key: password
+          optional: true
     - name: GITOPS_REPO_URL
       valueFrom:
         configMapKeyRef:
