for PipelineResource remove triggers prefix triggers.tekton.dev/v1beta1  ==>  tekton.dev/v1alpha1

--- a/pipelines/incubator/build-deploy-pl-tr.yaml
+++ b/pipelines/incubator/build-deploy-pl-tr.yaml
@@ -75,7 +75,7 @@ spec:
   - name: webhooks-tekton-target-namespace
     description: The namespace in which to create this TriggerTemplate's resources
   resourcetemplates:
-  - apiVersion: triggers.tekton.dev/v1alpha1
+  - apiVersion: tekton.dev/v1alpha1
     kind: PipelineResource
     metadata:
       name: git-source-$(uid)
@@ -87,7 +87,7 @@ spec:
         value: $(params.gitrevision)
       - name: url
         value: $(params.gitrepositoryurl)
-  - apiVersion: triggers.tekton.dev/v1alpha1
+  - apiVersion: tekton.dev/v1alpha1
     kind: PipelineResource
     metadata:
       name: docker-image-$(uid)
@@ -97,7 +97,7 @@ spec:
       params:
       - name: url
         value: $(params.webhooks-tekton-docker-registry)
-  - apiVersion: triggers.tekton.dev/v1alpha1
+  - apiVersion: tekton.dev/v1alpha1
     kind: PipelineRun
     metadata:
       generateName: StackId-build-deploy-pl-run-
