Updated tasks and pipeline for adapting the scripts placed in kabanero-utils image

--- a/docker/kabanero-utils/Dockerfile
+++ b/docker/kabanero-utils/Dockerfile
@@ -1,6 +1,11 @@
 FROM appsody/appsody-buildah:0.6.0-buildah1.9.0
 
-#Running the kubectl installation script in above base image
-COPY /install_utilities.sh /root/
-RUN chmod +x /root/install_utilities.sh
-RUN /root/install_utilities.sh
+RUN mkdir -p /scripts
+
+
+# Copying the scripts required by the pipelines and install_utilities.sh script
+COPY /scripts/*.sh  /scripts/
+RUN chmod +x /scripts/*.sh
+
+#Executing the script to install the utility tools.
+RUN /scripts/install_utilities.sh
