--- a/pipelines/incubator/build-deploy-pl.yaml
+++ b/pipelines/incubator/build-deploy-pl.yaml
@@ -21,9 +21,9 @@ spec:
   - name: docker-image
     type: image
   tasks:
-  - name: utilities-task
+  - name: build-push-task
     taskRef:
-      name: StackId-utilities-task
+      name: StackId-build-push-task
     params:
       - name: docker-imagename
         value: "$(params.docker-imagename)"
@@ -36,18 +36,6 @@ spec:
       - name: docker-image
         resource: docker-image
       outputs:
-      - name: git-source
-        resource: git-source
-  - name: build-push-task
-    taskRef:
-      name: StackId-build-push-task
-    runAfter: [utilities-task]
-    resources:
-      inputs:
-      - name: git-source
-        resource: git-source
-        from: [utilities-task]
-      outputs:
       - name: docker-image
         resource: docker-image
       - name: git-source
@@ -56,11 +44,15 @@ spec:
     taskRef:
       name: StackId-image-scan-task
     runAfter: [build-push-task]
+    params:
+      - name: docker-imagename
+        value: "$(params.docker-imagename)"
+      - name: docker-imagetag
+        value: "$(params.docker-imagetag)"
     resources:
       inputs:
       - name: git-source
         resource: git-source
-        from: [utilities-task]
       - name: docker-image
         resource: docker-image
   - name: deploy-task
@@ -74,6 +66,11 @@ spec:
     taskRef:
       name: StackId-deploy-task
     runAfter: [image-scan-task]
+    params:
+      - name: docker-imagename
+        value: "$(params.docker-imagename)"
+      - name: docker-imagetag
+        value: "$(params.docker-imagetag)"
     resources:
       inputs:
       - name: git-source
