--- a/pipelines/incubator/build-push-task.yaml
+++ b/pipelines/incubator/build-push-task.yaml
@@ -8,6 +8,15 @@ spec:
     resources:
     - name: git-source
       type: git
+    - name: docker-image
+      type: image
+    params:
+    - name: docker-imagename
+      type: string
+      default: ""
+    - name: docker-imagetag
+      type: string
+      default: ""
   outputs:
     resources:
     - name: docker-image
@@ -18,12 +27,12 @@ spec:
   - name: enforce-stack-policy-pre-build
     securityContext:
       privileged: true
-    image: kabanero/kabanero-utils:0.8.0
+    image: kabanero/kabanero-utils:0.9.0
     command: ["/bin/bash"]
     args:
       - -c
       - |
-        /workspace/$gitsource/enforce_stack_policy.sh pre-build
+        /scripts/enforce_stack_policy.sh pre-build
         
     env:
     - name: gitsource
@@ -56,23 +65,23 @@ spec:
   - name: build
     securityContext:
       privileged: true
-    image: kabanero/kabanero-utils:0.8.0
+    image: kabanero/kabanero-utils:0.9.0
     command: ["/bin/bash"]
     args:
       - -c
       - |
         #executing the insecure_registry_setup.sh script if exists, to add internal registry to insecure registry list
-        if [ -f "/workspace/$gitsource/insecure_registry_setup.sh" ]; then
-           echo "Running the script /workspace/$gitsource/insecure_registry_setup.sh ...."
-           /workspace/$gitsource/insecure_registry_setup.sh
+        if [ -f "/scripts/insecure_registry_setup.sh" ]; then
+           echo "Running the script /scripts/insecure_registry_setup.sh ...."
+           /scripts/insecure_registry_setup.sh
            echo "printing the content /etc/containers/registries.conf"
            cat /etc/containers/registries.conf
         fi
 
         #executing the ca_certs_setup.sh script if exists, to add additional trusted ca certs to /etc/docker/certs.d/<hosname>/ca.crt
-        if [ -f "/workspace/$gitsource/ca_certs_setup.sh" ]; then
-           echo "Running the script /workspace/$gitsource/ca_certs_setup.sh ...."
-           /workspace/$gitsource/ca_certs_setup.sh
+        if [ -f "/scripts/ca_certs_setup.sh" ]; then
+           echo "Running the script /scripts/ca_certs_setup.sh ...."
+           /scripts/ca_certs_setup.sh
         fi
         
         echo "Configmap value for DEFAULT_STACK_IMAGE_REGISTRY_URL=$DEFAULT_STACK_IMAGE_REGISTRY_URL"
@@ -127,11 +136,11 @@ spec:
 
         cd /workspace/$gitsource
  
-        OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE=$( /workspace/$gitsource/imageurl_imagename_lowercase.sh )
+        OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE=$( /scripts/imageurl_imagename_lowercase.sh -u $(inputs.resources.docker-image.url) -n $(inputs.params.docker-imagename) -t $(inputs.params.docker-imagetag) )
         retVal=$?
         if [ $retVal -ne 0 ]
         then
-           echo "The script failed(/workspace/$gitsource/imageurl_imagename_lowercase.sh) Reason: $OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE" >&2
+           echo "The script failed(/scripts/imageurl_imagename_lowercase.sh) Reason: $OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE" >&2
            exit $retVal
         fi
 
@@ -140,7 +149,6 @@ spec:
         appsody build -t "$OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE" --buildah --buildah-options "--format=docker" --stack-registry "$STACK_IMAGE_REGISTRY_URL"
         echo "Copying the generated app-deploy.yaml file from input to the output to pass the file to the next task when this task is used in deploy pipeline"
         cp app-deploy.yaml $(outputs.resources.git-source.path)
-        cp *.sh $(outputs.resources.git-source.path)
     env:
     - name: gitsource
       value: git-source
@@ -172,12 +180,12 @@ spec:
   - name: enforce-stack-policy-post-build
     securityContext:
       privileged: true
-    image: kabanero/kabanero-utils:0.8.0
+    image: kabanero/kabanero-utils:0.9.0
     command: ["/bin/bash"]
     args:
       - -c
       - |
-        /workspace/$gitsource/enforce_stack_policy.sh post-build
+        /scripts/enforce_stack_policy.sh post-build
         
     env:
     - name: gitsource
@@ -210,31 +218,31 @@ spec:
   - name: push
     securityContext:
       privileged: true
-    image: kabanero/kabanero-utils:0.8.0
+    image: kabanero/kabanero-utils:0.9.0
     command: ["/bin/bash"]
     args:
       - -c
       - |
 
-        OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE=$( /workspace/$gitsource/imageurl_imagename_lowercase.sh)
+        OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE=$( /scripts/imageurl_imagename_lowercase.sh -u $(inputs.resources.docker-image.url) -n $(inputs.params.docker-imagename) -t $(inputs.params.docker-imagetag) )
         retVal=$?
         if [ $retVal -ne 0 ]
         then
-           echo "The script failed(/workspace/$gitsource/imageurl_imagename_lowercase.sh) Reason: $OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE" >&2
+           echo "The script failed(/scripts/imageurl_imagename_lowercase.sh) Reason: $OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE" >&2
            exit $retVal
         fi
         echo "OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE=$OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE"
 
         #executing the insecure_registry_setup.sh script if exists, to add internal registry to insecure registry list
-        if [ -f "/workspace/$gitsource/insecure_registry_setup.sh" ]; then
-           echo "Running the script /workspace/$gitsource/insecure_registry_setup.sh ...."
-           /workspace/$gitsource/insecure_registry_setup.sh
+        if [ -f "/scripts/insecure_registry_setup.sh" ]; then
+           echo "Running the script /scripts/insecure_registry_setup.sh ...."
+           /scripts/insecure_registry_setup.sh
         fi
 
         #executing the ca_certs_setup.sh script if exists, to add additional trusted ca certs to /etc/docker/certs.d/<hosname>/ca.crt
-        if [ -f "/workspace/$gitsource/ca_certs_setup.sh" ]; then
-           echo "Running the script /workspace/$gitsource/ca_certs_setup.sh ...."
-           /workspace/$gitsource/ca_certs_setup.sh
+        if [ -f "/scripts/ca_certs_setup.sh" ]; then
+           echo "Running the script /scripts/ca_certs_setup.sh ...."
+           /scripts/ca_certs_setup.sh
         fi
 
         buildah push "$OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE" "docker://$OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE"
